--- a/Hangman/Error/task-info.yaml
+++ b/Hangman/Error/task-info.yaml
@@ -752,5 +752,8 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/projects/265/stages/1345/implement#comment
 check_profile: hyperskill_node_javascript
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Sat, 24 Sep 2022 14:27:21 UTC
 record: -1
