--- a/Hangman/The value of life/task-info.yaml
+++ b/Hangman/The value of life/task-info.yaml
@@ -674,5 +674,8 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/projects/265/stages/1344/implement#comment
 check_profile: hyperskill_node_javascript
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Sat, 24 Sep 2022 13:15:10 UTC
+record: 6
